fixed input width overflow

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ input {
   border: none;
   font-size: 40px;
   padding: 10px;
+  box-sizing: border-box;
   background-color: #eee;
   margin-bottom: 20px;
 }
